stackgres-k8s/src/admin-ui/public/style.css
/* ... */
.resourcesMetadata table:not(:last-of-type), .postgresServices table:not(:last-of-type), .podsMetadata table:not(:last-of-type) {
    margin-bottom: 15px;
}

table.clusterConfig thead {
    display: none;
}

table.clusterConfig th:first-child, table.clusterConfig td:first-child {
    width: 150px;
}

table.clusterConfig tr {
    background: transparent;
}

table.clusterConfig td {
    padding: 10px;
    vertical-align: top;
    border: 1px solid #F0F0F1;
}

table.clusterConfig td.label {
    font-weight: bold;
    /*color: var(--blue);*/
    color: #4D4F5C;
}

table.clusterConfig td:not([colspan]) {
    width: 25%;
}

table.clusterConfig a {
    color: initial;
    display: inline-flex;
    cursor: pointer;
}

table.clusterConfig a:hover svg, td.usedOn a:hover svg path{
    fill: var(--lblue) !important;
}

table.clusterConfig svg, td.usedOn svg {
    fill: var(--blue);
    width: 15px;
    display: inline-block;
    margin-left: 5px;
}

table.backups .details > td {
    vertical-align: top;
}

table.backupConfig tr.base:first-of-type {
    border-top: 1px solid #f0f0f1;
}

table.backupConfig  {
    border-bottom: 1px solid #f0f0f1;
}

table.backupConfig tr:nth-child(4n-2), table.backupConfig tr:nth-child(4n-2) + tr.details, table.podStatus tr:nth-child(4n-2) {
    background: #fff;
}

table.backupConfig tr.base.open {
    border-top: 1px solid #f0f0f1;
}
/* ... */

